# 2DPixelPerfectShadows

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
Doku/: 2DPixelPerfectShadowDoku.tex  literatur.bib
Doku/chapters/: Bausteine.tex  EinleitungProblemstellung.tex  Implementierung.tex  Kurzfassung.tex  Motivation.tex  Verfahren.tex  WeitereKapitel.tex  ZusammenfassungAusblick.tex
resources/shader/: basic.fs  basic.vs  passthrough.vs  shadow_maper.fs  shadow_renderer.fs
src/ECS/: entity_manager.cpp  entity_manager.hpp
src/Render/: model.hpp  render_engine.cpp  render_engine.hpp  shader.cpp  shader.hpp  texture.hpp
src/UI/: main_screen.cpp  main_screen.hpp
